# lab3_os

./: CMakeLists.txt  contacts.txt  result.txt  script.py
